fixed the issue with the spacing

--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,6 @@ hr{
     float: center;
     margin-right:15px;
 }
-p input{
-    margin: 0;
-    padding: 0;
+p{
+    display: inline;
 }
